fix custom recyclerView